Add dynamic seed members provider to MembershipConfig